--- a/_config.yml
+++ b/_config.yml
@@ -2,15 +2,14 @@ title: "JBD Lab"
 description: "This is the official web page for the Bondy-Denomy Lab at UCSF."
 
 #domain: mjoh223.github.io
-#url: https://mjoh223.github.io
-#baseurl: /jbd-lab.github.io
+url: https://bondy-denomy-lab.github.io/
+baseurl: /jbd-lab.github.io
 
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
-  - jemoji
   - jekyll-include-cache
 paginate: 5
 paginate_path: "/news/page:num/"
