put back the baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-#baseurl: /jbd-lab
+baseurl: /jbd-lab
 
 title: "JBD Lab"
 description: "This is the official web page for the Bondy-Denomy Lab at UCSF."
